--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -11,18 +11,42 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        const second = () => {
-            setTimeout(() => {
-                console.log('Async party!');
-            }, 2000);
-        }
+        // const second = () => {
+        //     setTimeout(() => {
+        //         console.log('Async party!');
+        //     }, 2000);
+        // }
 
-        const first = () => {
-            console.log('Hey There!');
-            second();
-            console.log('The End!');
+        // const first = () => {
+        //     console.log('Hey There!');
+        //     second();
+        //     console.log('The End!');
+        // }
+        // first();
+
+        function getRecpie() {
+
+            setTimeout(() => {
+                const recipeID = [520, 360, 123, 225];
+                console.log(recipeID);
+                setTimeout(id => {
+                    const recpie = {
+                        title: 'Fresh Tomato Pasta',
+                        publisher: 'Archimedes'
+                    };
+                    console.log(`${id}: ${recpie.title}, by ${recpie.publisher}.`);
+                    setTimeout(publisher => {
+                        const recpie = {
+                            title: 'Pizza',
+                            publisher: 'Archimedes'
+                        };
+                        console.log(recpie.title);
+                    }, 1500, recpie.publisher);
+                }, 1500, recipeID[2]);
+            }, 1500);
+
         }
-        first();
+        getRecpie();
     </script>
 </body>
 
