--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -11,6 +11,8 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
+        /* Async code (Section 8, lecture 123):  */
+
         // const second = () => {
         //     setTimeout(() => {
         //         console.log('Async party!');
@@ -24,29 +26,91 @@
         // }
         // first();
 
-        function getRecpie() {
+        /* The old way: callback hell (Section 8, lecture 122): */
+
+        // function getRecpie() {
+
+        //     setTimeout(() => {
+        //         const recipeID = [520, 360, 123, 225];
+        //         console.log(recipeID);
+
+        //         setTimeout(id => {
+
+        //             const recpie = {
+        //                 title: 'Fresh Tomato Pasta',
+        //                 publisher: 'Archimedes'
+        //             };
+        //             console.log(`${id}: ${recpie.title}, by ${recpie.publisher}.`);
+
+        //             setTimeout(publisher => {
+        //                 const recpie = {
+        //                     title: 'Pizza',
+        //                     publisher: 'Archimedes'
+        //                 };
+        //                 console.log(recpie.title);
+
+        //             }, 1500, recpie.publisher);
+
+        //         }, 1500, recipeID[2]);
+
+        //     }, 1500);
+        // }
+        // getRecpie();
+
+        /* Promises (Section 8, lecture 123): */
+
+        // Declaring a promise - new Promise((resolve, reject)):
+        const getId = new Promise((resolve, reject) => {
 
             setTimeout(() => {
-                const recipeID = [520, 360, 123, 225];
-                console.log(recipeID);
-                setTimeout(id => {
+                resolve([520, 360, 123, 225]);
+            }, 1500);
+        });
+
+        const getRecpie = recId => {
+            return new Promise((resolve, reject) => {
+
+                setTimeout((id) => {
+
                     const recpie = {
                         title: 'Fresh Tomato Pasta',
                         publisher: 'Archimedes'
                     };
-                    console.log(`${id}: ${recpie.title}, by ${recpie.publisher}.`);
-                    setTimeout(publisher => {
+                    resolve(`${id}: ${recpie.title}, by ${recpie.publisher}.`);
+
+                }, 1800, recId);
+            });
+        }
+
+        const getRelated = (publisher) => {
+            return new Promise((resolve, reject) => {
+                setTimeout((pub) => {
                         const recpie = {
                             title: 'Pizza',
                             publisher: 'Archimedes'
                         };
-                        console.log(recpie.title);
-                    }, 1500, recpie.publisher);
-                }, 1500, recipeID[2]);
-            }, 1500);
-
+                        resolve(`${pub}: ${recpie.title}`);
+                    },
+                    1900, publisher);
+            });
         }
-        getRecpie();
+
+        // Consuming a promise (then/catch):
+        getId
+            .then(IDs => {
+                console.log(IDs); // -> [520, 360, 123, 225]
+                return getRecpie(IDs[2]);
+            })
+            .then((recpie) => {
+                console.log(recpie); // -> 123: Fresh Tomato Pasta, by Archimedes.
+                return getRelated('Jonas');
+            })
+            .then((recpie) => {
+                console.log(recpie); //-> Jonas: Pizza
+            })
+            .catch((error) => {
+                console.log('Error!');
+            });
     </script>
 </body>
 
